--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   <title>Document</title>
 </head>
 <body>
+  <div id="root">este es un cambio</div>
   <script type="module" src="main.js"></script>
 </body>
 </html>
