--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./styles/styles.css">
+  <script src="https://kit.fontawesome.com/2622dc0745.js" crossorigin="anonymous"></script>
   <title>Knitters</title>
 </head>
 <body>
